FSPA-453 fox lints

--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="selectedItem">
   <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="equipmentInfo" [anchors]="anchors">
   </form-navigation>
   <div class="equipment-detail-container">
