--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -4,7 +4,13 @@
   <div class="company-detail-container">
     <navigation-anchor id="basic-information"></navigation-anchor>
     <bd-view-detail-section [labelText]="'BASIC INFORMATION'" [addButton]="false">
-    <company-basic-information [company]="selectedItem"></company-basic-information>
-  </bd-view-detail-section>
+      <company-basic-information [company]="selectedItem"></company-basic-information>
+    </bd-view-detail-section>
+    <navigation-anchor id="address"></navigation-anchor>
+    <bd-view-detail-section [labelText]="'Address'" [addContent]="'add address'" [changeButton]="false">
+      <div class="company-address-container">
+        <company-address *ngFor="let location of selectedItem.locations" [location]="location"></company-address>
+      </div>
+    </bd-view-detail-section>
   </div>
 </div>
