--- a/src/app/companies/components/company-detail/company-detail.component.scss
+++ b/src/app/companies/components/company-detail/company-detail.component.scss
@@ -1,8 +1,9 @@
-driver-equipment-associations {
+company-address {
   display: block;
 
   &:first-child {
     margin-top: 0;
   }
+
   margin-top: 10px;
 }
