--- a/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.html
+++ b/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.html
@@ -2,7 +2,7 @@
   <div class="title">
     <label for="">{{labelText}}</label>
     <div class="buttons-panel">
-      <bd-form-button *ngIf="addButton" [buttonText]="'add'" buttonType="small" class="add-button">
+      <bd-form-button *ngIf="addButton" [buttonText]="addContent" buttonType="small" class="add-button">
       </bd-form-button>
       <bd-form-button *ngIf="changeButton" [buttonText]="'change'" buttonType="small" class="change-button">
       </bd-form-button>
