--- a/src/app/companies/components/company-detail/company-detail.component.scss
+++ b/src/app/companies/components/company-detail/company-detail.component.scss
@@ -7,3 +7,13 @@ company-address {
 
   margin-top: 10px;
 }
+
+company-contact {
+  display: block;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  margin-top: 10px;
+}
