FSPA-457 #comment rename change button to edit in driver and company views

--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -1,5 +1,7 @@
 <div *ngIf="selectedItem">
   <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="selectedItem.name" [anchors]="anchors">
+    <bd-form-button [buttonText]="'edit'" buttonType="small" (click)="onEdit()">
+    </bd-form-button>
   </form-navigation>
   <div class="company-detail-container">
     <navigation-anchor id="basic-information"></navigation-anchor>
@@ -7,11 +9,11 @@
       <company-basic-information [company]="selectedItem"></company-basic-information>
     </bd-view-detail-section>
     <navigation-anchor id="address"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Address'" [addContent]="'add address'" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'Address'" [addContent]="'add address'" [editButton]="false">
         <company-address *ngFor="let location of selectedItem.locations" [location]="location"></company-address>
     </bd-view-detail-section>
     <navigation-anchor id="contacts"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Contacts'" [addContent]="'add contact'" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'Contacts'" [addContent]="'add contact'" [editButton]="false">
         <company-contact *ngFor="let contact of selectedItem.contacts" [contact]="contact"></company-contact>
     </bd-view-detail-section>
   </div>
