--- a/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.scss
+++ b/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.scss
@@ -23,9 +23,9 @@
         height: 100%;
         align-items: flex-start;
         justify-content: space-between;
-        
+
         .add-button,
-        .change-button {
+        .edit-button {
           display: flex;
           margin-left: 5px;
         }
