--- a/src/app/drivers/components/driver-detail/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail/driver-detail.component.html
@@ -1,21 +1,21 @@
 <div *ngIf="selectedItem">
   <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="driverFullName" [anchors]="anchors">
-      <bd-form-button [buttonText]="'change'" buttonType="small" (click)="onEdit()">
+      <bd-form-button [buttonText]="'edit'" buttonType="small" (click)="onEdit()">
       </bd-form-button>
   </form-navigation>
   <div class="driver-detail-container">
     <navigation-anchor id="information"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'INFORMATION'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'INFORMATION'" [addButton]="false" [editButton]="false">
       <driver-information [driver]="selectedItem">
       </driver-information>
     </bd-view-detail-section>
     <navigation-anchor id="equipment-associations"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'EQUIPMENT ASSOCIATIONS'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'EQUIPMENT ASSOCIATIONS'" [addButton]="false" [editButton]="false">
       <driver-equipment-associations *ngFor="let associatedEquipment of selectedItem.associatedEquipments" [associatedEquipment]="associatedEquipment"></driver-equipment-associations>
       <driver-payment-type [driver]="selectedItem"></driver-payment-type>
     </bd-view-detail-section>
     <navigation-anchor id="license"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'License'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'License'" [addButton]="false" [editButton]="false">
       <driver-license [driver]="selectedItem"></driver-license>
     </bd-view-detail-section>
   </div>
