FSPA-457 code refactoring

--- a/src/app/companies/components/company-detail/company-detail.component.scss
+++ b/src/app/companies/components/company-detail/company-detail.component.scss
@@ -1,13 +1,4 @@
-company-address {
-  display: block;
-
-  &:first-child {
-    margin-top: 0;
-  }
-
-  margin-top: 10px;
-}
-
+company-address,
 company-contact {
   display: block;
 
