--- a/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.html
+++ b/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.html
@@ -4,7 +4,7 @@
     <div class="buttons-panel">
       <bd-form-button *ngIf="addButton" [buttonText]="addContent" buttonType="small" class="add-button">
       </bd-form-button>
-      <bd-form-button *ngIf="editButton" [buttonText]="'edit'" buttonType="small" class="edit-button">
+      <bd-form-button *ngIf="editButton" [buttonText]="'edit'" buttonType="small" class="edit-button" (click)="onEditClick()">
       </bd-form-button>
     </div>
   </div>
