FSPA-461 #comment added background to status text

--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -9,6 +9,10 @@
   &.active,
   &:hover {
     background: $light-blue;
+
+    .status-text {
+      background: $light-blue;
+    }
   }
 
   &.active {
@@ -67,8 +71,9 @@
   .status-text {
     position: absolute;
     right: 35px;
+    padding: 5px 0 5px 13px;
     line-height: 1em;
-    bottom: 13px;
+    bottom: 8px;
     justify-content: center;
   }
 
