--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -2,8 +2,6 @@
   <h3>Sign Up</h3>
   <bd-register-form [viewMode]="formViewMode"></bd-register-form>
   <div class="auth-component-footer">
-    <a [routerLink]="['/auth/login']">
-    Already registered?
-    Login</a>
+    <a [routerLink]="['/auth/login']">Already registered? Login</a>
   </div>
 </div>
