--- a/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
@@ -6,13 +6,33 @@
   <bd-auth-form-message-helper>
     Please enter the Email or Phone number that you used to log on to the site.
   </bd-auth-form-message-helper>
-  <bd-validator [component]="passwordRecoveryForm.controls.username" [errorDefs]="{required: 'This field is required'}">
+
+  <bd-form-switch class="bd-form-control"
+    formControlName="userNameType"
+    [hideLabel]="true"
+    [enableButtonSwitch]="true"
+    [items]="constants.USER_NAME_TYPES">
+  </bd-form-switch>
+
+  <bd-validator *ngIf="passwordRecoveryForm.controls.userNameType.value === 'email'"
+    [component]="passwordRecoveryForm.controls.email"
+    [errorDefs]="{required: 'This field is required', isValidMailFormat: 'Email entered not correct.'}">
     <bd-input
       class="bd-form-control"
-      [labelText]="'Email or Phone'"
-      formControlName="username">
+      [labelText]="'Email'"
+      formControlName="email">
     </bd-input>
   </bd-validator>
+  <bd-validator *ngIf="passwordRecoveryForm.controls.userNameType.value === 'phone'"
+    [component]="passwordRecoveryForm.controls.cellphone"
+    [errorDefs]="{required: 'This field is required', isValidPhoneFormat: 'Phone should consist of 10 numbers.'}">
+    <bd-input
+      class="bd-form-control"
+      [labelText]="'Phone'"
+      formControlName="cellphone">
+    </bd-input>
+  </bd-validator>
+
   <div class="divider"></div>
   <bd-button
     type="submit"
