FSPA-452 add edit form component

--- a/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.scss
@@ -45,8 +45,12 @@
       display: flex;
       justify-content: space-between;
 
-      .value {
-        color: $black;
+      span {
+        line-height: 18px;
+
+        &.value {
+          color: $black;
+        }
       }
     }
   }
