--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="selectedItem">
   <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="equipmentInfo" [anchors]="anchors">
-      <bd-form-button [buttonText]="'change'" buttonType="small" (click)="onEdit()">
+      <bd-form-button [buttonText]="'edit'" buttonType="small" (click)="onEdit()">
       </bd-form-button>
   </form-navigation>
   <div class="equipment-detail-container">
