--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -5,19 +5,19 @@
   </form-navigation>
   <div class="equipment-detail-container">
     <navigation-anchor id="equipment-detail-employment"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'EMPLOYMENT'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'EMPLOYMENT'" [addButton]="false" [editButton]="false">
       <equipment-employment [equipment]="selectedItem"></equipment-employment>
     </bd-view-detail-section>
     <!--<navigation-anchor id="equipment-detail-assignment"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'ASSIGNMENT'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'ASSIGNMENT'" [addButton]="false" [editButton]="false">
       <equipment-assignment [equipment]="selectedItem"></equipment-assignment>
     </bd-view-detail-section>-->
     <navigation-anchor id="equipment-detail-details"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'EQUIPMENT DETAILS'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'EQUIPMENT DETAILS'" [addButton]="false" [editButton]="false">
       <equipment-details [equipment]="selectedItem"></equipment-details>
     </bd-view-detail-section>
     <navigation-anchor id="equipment-detail-mileage"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'MILEAGE'" [addButton]="false" [changeButton]="false">
+    <bd-view-detail-section [labelText]="'MILEAGE'" [addButton]="false" [editButton]="false">
       <equipment-mileage 
         *ngFor="let record of selectedItem.mileageRecords"
         [mileageRecord]="record">
