FSPA-455 add redux and routing

--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -13,7 +13,7 @@
         <company-address *ngFor="let location of selectedItem.locations" [location]="location"></company-address>
     </bd-view-detail-section>
     <navigation-anchor id="contacts"></navigation-anchor>
-    <bd-view-detail-section [labelText]="'Contacts'" [addContent]="'add contact'" [editButton]="false">
+    <bd-view-detail-section [labelText]="'Contacts'" [addContent]="'add contact'" [editButton]="false" (addClick)="onAddContactClick()">
         <company-contact *ngFor="let contact of selectedItem.contacts" [contact]="contact"></company-contact>
     </bd-view-detail-section>
   </div>
