FSPA-468 #comment show address on more than two lines, fixed notes

--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -21,7 +21,7 @@
 
   .left {
     width: 50%;
-    padding: $default-margin 0;
+    padding: $default-margin $default-margin $default-margin 0;
     border-right: $border;
   }
 
