--- a/src/app/companies/components/company-detail/components/company-address/company-address.component.scss
+++ b/src/app/companies/components/company-detail/components/company-address/company-address.component.scss
@@ -1,7 +1,6 @@
 @import '../../../../../../assets/styles/variables';
 @import '../../../../../../assets/styles/mixins';
 @import '../../../../../../assets/styles/font-icons';
-
 $element-height: 18px;
 
 .location-container {
@@ -13,8 +12,11 @@ $element-height: 18px;
     }
 
     .street-address-container {
-      @include multi-line-ellipsis($line-height: 18px, $line-count: 2);
       color: $dark-grey;
+    }
+
+    .notes {
+      word-wrap: break-word;
     }
   }
 }
