FSPA-452 fix create new mileage record function

--- a/src/app/forms/mileages-form/mileages-form.component.html
+++ b/src/app/forms/mileages-form/mileages-form.component.html
@@ -5,7 +5,7 @@
         [disabled]="disabled" 
         [viewMode]="viewMode" 
         [isLast]="last" 
-        (addItem)="createItem()"
+        (addItem)="addNewItem()"
         (removeItem)="removeItem(data)">
     </mileage-form>
 </template>
