FSPA-452 rename mileage class

--- a/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.html
@@ -1,9 +1,9 @@
 <div class="mileage-container">
     <div class="info-container">
-        <span class="value">{{mileageRecord.value}}</span>
-        <span class="type">{{mileageRecord.type}}</span>
+        <span class="value">{{mileage.value}}</span>
+        <span class="type">{{mileage.type}}</span>
     </div>
     <div class="date-container">
-        <span class="date">{{mileageRecord.date | date:'short'}}</span>
+        <span class="date">{{mileage.date | date:'short'}}</span>
     </div>
 </div>
