--- a/src/app/equipment/components/equipment-detail/equipment-detail.component.html
+++ b/src/app/equipment/components/equipment-detail/equipment-detail.component.html
@@ -19,8 +19,8 @@
     <navigation-anchor id="equipment-detail-mileage"></navigation-anchor>
     <bd-view-detail-section [labelText]="'MILEAGE'" [addButton]="false" [editButton]="false">
       <equipment-mileage 
-        *ngFor="let record of selectedItem.mileageRecords"
-        [mileageRecord]="record">
+        *ngFor="let record of selectedItem.mileages"
+        [mileage]="record">
       </equipment-mileage>
     </bd-view-detail-section>
   </div>
