--- a/src/app/forms/mileages-form/mileages-form.component.html
+++ b/src/app/forms/mileages-form/mileages-form.component.html
@@ -1,7 +1,7 @@
 <template let-data ngFor [ngForOf]="renderFormData" let-i="index" let-last="last" [ngForTrackBy]="trackBy">
     <mileage-form 
         [group]='data.group' 
-        [mileageRecord]='data.item' 
+        [mileage]='data.item' 
         [disabled]="disabled" 
         [viewMode]="viewMode" 
         [isLast]="last" 
