FSPA-452 change data sending to edit components

--- a/src/app/companies/components/company-edit.component.html
+++ b/src/app/companies/components/company-edit.component.html
@@ -10,7 +10,7 @@
   <company-form
     [disabled]="isLoading"
     [scrollable]="true"
-    [company]="selected$ | async"
+    [company]="selectedItem"
     [viewMode]="viewMode"
     (save)="onItemSave($event)"
     (cancel)="onItemCancel()">
