--- a/src/app/drivers/components/driver-edit.component.html
+++ b/src/app/drivers/components/driver-edit.component.html
@@ -10,7 +10,7 @@
   <driver-form
     [scrollable]="true"
     [disabled]="isLoading"
-    [driver]="selected$ | async"
+    [driver]="selectedItem"
     [viewMode]="viewMode"
     (save)="onItemSave($event)"
     (cancel)="onItemCancel()">
