--- a/src/app/forms/company-info-form/company-info-form.component.html
+++ b/src/app/forms/company-info-form/company-info-form.component.html
@@ -4,9 +4,11 @@
       </bd-input>
       <bd-dropdown class="bd-form-control" [labelText]="'Company type'" formControlName="type" [items]="companyTypes">
       </bd-dropdown>
-      <bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="true" formControlName="status"
-      [items]="companyStatuses">
-      </bd-form-switch>
+      <bd-validator [component]="companyForm.controls.status" [errorDefs]="{required: 'Status is required'}">
+        <bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="true" formControlName="status"
+        [items]="companyStatuses">
+        </bd-form-switch>
+      </bd-validator>
       <bd-validator [component]="companyForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
         <bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
         </bd-input>
