--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -11,19 +11,19 @@
 
   <bd-notification-popover
       [width]="400"
-      [notificationType]="notificationTypeEnum.Task"
+      [notificationType]="notificationTypeEnum.TASK"
       [items]="testNotifications">
   </bd-notification-popover>
 
   <bd-notification-popover
       [width]="400"
-      [notificationType]="notificationTypeEnum.Message"
+      [notificationType]="notificationTypeEnum.MESSAGE"
       [items]="testNotifications">
   </bd-notification-popover>
 
   <bd-notification-popover
       [width]="400"
-      [notificationType]="notificationTypeEnum.Notification"
+      [notificationType]="notificationTypeEnum.NOTIFICATION"
       [items]="testNotifications">
   </bd-notification-popover>
 
