FSPA-480 update contact info, equipment models and enums

--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -16,7 +16,7 @@ class="card-section"
   </div>
   <div class="middle">
     <span class="driver-name">{{item.driverFirstName}} {{item.driverLastName}}</span>
-    <span class="driver-type ellipsis">{{equipmentTypeText}}</span>
+    <span class="driver-type ellipsis">{{driverTypeText}}</span>
   <div class="changes ellipsis">{{this.item.itemNotification?.date | date:'MM/dd'}}</div>
   </div>
   <div class="right">
