--- a/src/app/companies/components/company-edit/components/company-edit-contact/company-edit-contact.component.html
+++ b/src/app/companies/components/company-edit/components/company-edit-contact/company-edit-contact.component.html
@@ -13,16 +13,14 @@
       [disabled]="isLoading"
       [scrollable]="true"
       [viewMode]="viewMode"
-      [group]="contactForm"
-      [locations]="locations"
-      (save)="onItemSave($event)"
-      (cancel)="onItemCancel()">
+      [locations]="(parent$ | async)?.locations"
+   >
     </contact-form>
     <form-sticky-bottom-container [sticky]="true" [stickyPositionInsideScroll]="true">
       <div class="button-group">
         <bd-button [disabled]="disabled" (click)="onItemCancel()" [text]="'Cancel'" class="button">
         </bd-button>
-        <bd-button [disabled]="disabled" (click)="onSave()" color="primary" class="button" [text]="'Save'">
+        <bd-button [disabled]="disabled" (click)="onFormSave()" color="primary" class="button" [text]="'Save'">
         </bd-button>
       </div>
     </form-sticky-bottom-container>
