FSPA-364 fix bd-input suffix icon size

--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -107,7 +107,7 @@
 
     .bd-input-suffix {
       @include flex-element;
-      font-size: $form-control-font-size;
+      font-size: $small-font-size;
       flex-grow: 0;
       margin-left: $default-margin;
     }
