FSPA-464 added animation, reviewed issue with selected item

--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -3,26 +3,15 @@
 @import '../../../assets/styles/mixins';
 
 
-// :host {
-//   background: $white;
-//
-//   &.active,
-//   &:hover {
-//     background: $light-blue;
-//
-//     .status-text {
-//       background: $light-blue;
-//     }
-//   }
-//
-//   &.active {
-//     color: $black;
-//
-//     .card-section {
-//       border-bottom-color: $blue;
-//     }
-//   }
-// }
+:host {
+
+  &.active {
+
+    .card-section {
+      border-bottom-color: $blue;
+    }
+  }
+}
 
 .card-section {
   position: relative;
