--- a/src/app/drivers/components/driver-edit.component.html
+++ b/src/app/drivers/components/driver-edit.component.html
@@ -4,7 +4,7 @@
     [disabled]="isLoading"
     sticky
     [stickyPositionInsideScroll]="true"
-    [title]="'Driver'"
+    [title]="navigationTitle"
     [anchors]="anchors">
   </form-navigation>
   <driver-form
